[package]
name = "keypairhunt"
version = "0.1.0"
authors = ["fuyutarow <fuyutarow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
solana-sdk = "1.8.2"
tokio = { version = "1.14.0", features = ["full"] }
